--- a/bio/index.html
+++ b/bio/index.html
@@ -8,15 +8,15 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Tags :: Skylar Houghton">
+    <meta name="twitter:title" content="Bios :: Skylar Houghton">
     <meta name="twitter:description" content="">
-    <meta property="og:title" content="Tags :: Skylar Houghton">
+    <meta property="og:title" content="Bios :: Skylar Houghton">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://skylarhoughtongithub.github.io/static-jank-site/tags/index.html">
+    <meta property="og:url" content="https://skylarhoughtongithub.github.io/static-jank-site/bio/index.html">
     <meta property="og:site_name" content="Skylar Houghton">
-    <title>Tags :: Skylar Houghton</title>
-    <link href="/static-jank-site/tags/index.xml" rel="alternate" type="application/rss+xml" title="Tags :: Skylar Houghton">
+    <title>Bios :: Skylar Houghton</title>
+    <link href="/static-jank-site/bio/index.xml" rel="alternate" type="application/rss+xml" title="Bios :: Skylar Houghton">
     <!-- https://github.com/filamentgroup/loadCSS/blob/master/README.md#how-to-use -->
     <link href="/static-jank-site/css/fontawesome-all.min.css?1703383360" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/static-jank-site/css/fontawesome-all.min.css?1703383360" rel="stylesheet"></noscript>
     <link href="/static-jank-site/css/nucleus.css?1703383360" rel="stylesheet">
@@ -52,7 +52,7 @@
       window.T_N_results_found = `{1} results found for "{0}"`;
     </script>
   </head>
-  <body class="mobile-support html" data-url="/static-jank-site/tags/index.html">
+  <body class="mobile-support html" data-url="/static-jank-site/bio/index.html">
     <div id="R-body" class="default-animation">
       <div id="R-body-overlay"></div>
       <nav id="R-topbar">
@@ -70,12 +70,12 @@
           </div>
           <ol class="topbar-breadcrumbs breadcrumbs highlightable" itemscope itemtype="http://schema.org/BreadcrumbList"><li
             itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement"><a itemprop="item" href="/static-jank-site/index.html"><span itemprop="name">Skylar Houghton</span></a><meta itemprop="position" content="1">&nbsp;>&nbsp;</li><li
-            itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement"><span itemprop="name">Tags</span><meta itemprop="position" content="2"></li>
+            itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement"><span itemprop="name">Bios</span><meta itemprop="position" content="2"></li>
           </ol>
           <div class="topbar-area topbar-area-end" data-area="end">
             <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="/static-jank-site/index.html" title="Skylar Houghton (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
             </div>
-            <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><span class="topbar-control"><i class="fa-fw fas fa-chevron-right"></i></span>
+            <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="/static-jank-site/bio/who_i_am/index.html" title="Who I Am (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
             </div>
             <div class="topbar-button topbar-button-more" data-content-empty="hide" data-width-s="show" data-width-m="show" data-width-l="show"><button class="topbar-control" onclick="toggleTopbarFlyout(this)" type="button" title="More"><i class="fa-fw fas fa-ellipsis-v"></i></button>
               <div class="topbar-content">
@@ -91,14 +91,31 @@
       <div id="R-main-overlay"></div>
       <main id="R-body-inner" class="highlightable default" tabindex="-1">
         <div class="flex-block-wrapper">
-          <article>
+          <article class="default">
             <header class="headline">
             </header>
-<h1 id="tags">Tags</h1>
+<h1 id="bios">Bios</h1>
+
+<h2 id="create-this-page">Create this Page</h2>
+<p>You need to create a file for this page. You can either</p>
+<ul>
+<li>create a file in the <code>content</code> folder and fill it with Markdown content
+<ul>
+<li>inside a folder named by the page&rsquo;s title like <code>&lt;TITLE&gt;/_index.md</code> or <code>&lt;TITLE&gt;/index.md</code></li>
+<li>named by the page&rsquo;s title like <code>&lt;TITLE&gt;.md</code></li>
+</ul>
+</li>
+<li>create a file in the <code>static</code> folder and fill it with HTML content
+<ul>
+<li>inside a folder named by the page&rsquo;s title like <code>&lt;TITLE&gt;/index.html</code></li>
+</ul>
+</li>
+</ul>
 
             <footer class="footline">
             </footer>
-          </article>        </div>
+          </article>
+        </div>
       </main>
     </div>
     <aside id="R-sidebar" class="default-animation">
@@ -199,7 +216,7 @@
       <div id="R-content-wrapper" class="highlightable">
         <div id="R-topics">
           <ul class="enlarge morespace collapsible-menu">
-          <li data-nav-id="/static-jank-site/bio/index.html" class=""><a class="padding" href="/static-jank-site/bio/index.html">Bios</a><ul id="R-subsections-05b386085ed040b30ad423ec0b9ae9ba" class="morespace collapsible-menu">
+          <li data-nav-id="/static-jank-site/bio/index.html" class="active parent "><a class="padding" href="/static-jank-site/bio/index.html">Bios</a><ul id="R-subsections-05b386085ed040b30ad423ec0b9ae9ba" class="morespace collapsible-menu">
           <li data-nav-id="/static-jank-site/bio/who_i_am/index.html" class=""><a class="padding" href="/static-jank-site/bio/who_i_am/index.html">Who I Am</a></li>
           <li data-nav-id="/static-jank-site/bio/what_i_do/index.html" class=""><a class="padding" href="/static-jank-site/bio/what_i_do/index.html">What I Do</a></li></ul></li>
           </ul>
